force-app/main/default/objects/PortalOnboardingProgress__c/PortalOnboardingProgress__c.object-meta.xml
<CustomObject>
    <label>Portal Onboarding Progress</label>
    <nameField>
        <label>PortalOnboardingProgress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Porta lOnboarding Progress</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>