force-app/main/default/objects/PortalOnboardingProgress__c/fields/Partner_Portal_Task__c.field-meta.xml
<CustomField>
    <fullName>Partner_Portal_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Portal Task</label>
    <referenceTo>Portal_Task__c</referenceTo>
    <relationshipLabel>Porta lOnboarding Progress</relationshipLabel>
    <relationshipName>Porta_lOnboarding_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>