force-app/main/default/objects/PortalOnboardingProgress__c/fields/Portal_Account__c.field-meta.xml
<CustomField>
    <fullName>Portal_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Porta lOnboarding Progress</relationshipLabel>
    <relationshipName>Porta_lOnboarding_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>