force-app/main/default/objects/PortalOnboardingProgress__c/fields/Portal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Portal_Contact__c</fullName>
    <label>Portal Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Porta lOnboarding Progress</relationshipLabel>
    <relationshipName>Porta_lOnboarding_Progress</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>