force-app/main/default/objects/PortalOnboardingProgress__c/fields/sendAlert__c.field-meta.xml
<CustomField>
    <fullName>sendAlert__c</fullName>
    <defaultValue>true</defaultValue>
    <label>sendAlert</label>
    <type>Checkbox</type>
</CustomField>